<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能家居</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcom">welcom</string>
    <string name="contentDescription">contentDescription</string>
    <string name="ip">IP</string>
    <string name="ipaddr">192.168.11.254</string>
    <string name="port">端口</string>
    <string name="portVal">8888</string>
    <string name="cb_password">记住密码</string>
    <string name="cb_autolink">自动登录</string>
    <string name="btn_linkdevice">连接设备</string>
    <string name="tv_securitysetting">报警时段设置</string>
    <string name="tv_title_security">安防报警</string>
    <string name="tv_title_light">灯泡控制</string>
    <string name="tv_title_environment">环境监测</string>
    <string name="tv_title_socket">插座控制</string>
    <string name="tv_title_app">智能家居</string>
    <string name="tv_app_version">Version 1.0.0</string>
    <string name="tv_app_copyleft">林亮生 CopyLeft@2015 Lins</string>
    <string name="tv_security_info">开始时间 21:00 -- 结束时间 07:00</string>
    <string name="tv_temperature">温度：</string>
    <string name="tv_temperature_value">0</string>
    <string name="tv_o">O</string>
    <string name="tv_c">C</string>
    <string name="tv_p">%</string>
    <string name="tv_humidity">湿度：</string>
    <string name="voice_info">点击图标说话</string>
    <string name="main_light">灯</string>
    <string name="main_socket">插</string>
    <string name="main_light_info">灯泡控制</string>
    <string name="main_socket_info">插座控制</string>
    <string name="main_environment">环</string>
    <string name="main_security">安</string>
    <string name="main_environment_info">环境监测</string>
    <string name="main_security_info">安防报警</string>
    <string name="tv_add_lights">添加开关时段</string>
    <string name="tv_add_securities">添加安防时段</string>
    <string name="tv_add_light_start">开启时间</string>
    <string name="tv_add_light_start_value">21:00</string>
    <string name="tv_add_light_stop">关闭时间</string>
    <string name="tv_add_light_stop_value">09:00</string>
    <string name="tv_add_light_ensure">确定</string>
    <string name="tv_add_light_cancle">取消</string>
    <string name="tv_add_security">添加安防时段</string>
    <string name="tv_add_security_start">开启时间</string>
    <string name="tv_add_security_start_value">21:00</string>
    <string name="tv_add_security_stop">关闭时间</string>
    <string name="tv_add_security_stop_value">09:00</string>
    <string name="tv_add_security_ensure">确定</string>
    <string name="tv_add_security_cancle">取消</string>

</resources>
