<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<TextView 
	    android:text="@string/tv_title_app"
	    android:textSize="70sp"
	    android:textColor="@android:color/holo_green_dark"
	    android:paddingBottom="100dp"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>

	<TextView 
	    android:text="@string/tv_app_version"
	    android:textSize="30sp"
	    android:textColor="@android:color/holo_green_light"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"/>
	
	<TextView 
	    android:text="@string/tv_app_copyleft"
	    android:textSize="20sp"
	    android:textColor="@android:color/tertiary_text_dark"
	    android:layout_marginBottom="20dp"
	    android:layout_alignParentBottom="true"
	    android:gravity="center_horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"/>
	
</RelativeLayout>
