<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/background_light"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- 标题栏 -->
	<LinearLayout 
		android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<LinearLayout 
			android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
            <TextView
                android:text="@string/app_name"
                android:textSize="40sp"
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View 
            android:background="@android:color/darker_gray"
            android:layout_width="fill_parent"
            android:layout_height="2dp"/>
    </LinearLayout>

	<!-- 主菜单栏 -->
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_weight="3"
	    android:layout_width="match_parent"
	    android:layout_height="0dp">
        <TableLayout
            android:shrinkColumns="0,1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow >
	            <TextView 
	                android:id="@+id/main_light"
	                android:text="@string/main_light"
	                android:background="@drawable/main_bg"
	                android:gravity="center"
	                android:textSize="45sp"
	                android:layout_margin="20dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
	            <TextView 
	                android:id="@+id/main_socket"
	                android:text="@string/main_socket"
	                android:background="@drawable/main_bg"
	                android:gravity="center"
	                android:textSize="45sp"
	                android:layout_margin="20dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
            </TableRow>
			<TableRow >
	            <TextView 
	                android:text="@string/main_light_info"
	                android:gravity="center"
	                android:textSize="15sp"
	                android:layout_marginTop="3dp"
	                android:layout_marginBottom="3dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
	            <TextView 
	                android:text="@string/main_socket_info"
	                android:gravity="center"
	                android:textSize="15sp"
	                android:layout_marginTop="3dp"
	                android:layout_marginBottom="3dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow >
	            <TextView 
	                android:id="@+id/main_security"
	                android:text="@string/main_security"
	                android:background="@drawable/main_bg"
	                android:gravity="center"
	                android:textSize="45sp"
	                android:layout_margin="20dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
	            <TextView 
	                android:id="@+id/main_environment"
	                android:text="@string/main_environment"
	                android:background="@drawable/main_bg"
	                android:gravity="center"
	                android:textSize="45sp"
	                android:layout_margin="20dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
            </TableRow>
            <TableRow >
	            <TextView 
	                android:text="@string/main_security_info"
	                android:gravity="center"
	                android:textSize="15sp"
	                android:layout_marginTop="3dp"
	                android:layout_marginBottom="3dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
	            <TextView 
	                android:text="@string/main_environment_info"
	                android:gravity="center"
	                android:textSize="15sp"
	                android:layout_marginTop="3dp"
	                android:layout_marginBottom="3dp"
	                android:layout_width="300dp"
	                android:layout_height="wrap_content"/>
            </TableRow>
        </TableLayout>
	    <View 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</LinearLayout>

	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_weight="1"
	    android:layout_width="fill_parent"
	    android:layout_height="0dp">
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="match_parent">
			<View 
			    android:layout_alignParentTop="true"
			    android:background="@android:color/darker_gray"
		        android:layout_width="match_parent"
		        android:layout_height="2dp"/>
			<ImageView 
		    	android:id="@+id/voice"
		    	android:src="@drawable/voice"
		    	android:contentDescription="@string/app_name"
		    	android:layout_centerVertical="true"
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView 
			    android:id="@+id/voice_info"
		    	android:text="@string/voice_info"
		    	android:textSize="30sp"
		    	android:background="@drawable/voice_info"
		    	android:layout_toRightOf="@id/voice"
		    	android:layout_centerVertical="true"
		    	android:layout_width="match_parent"
				android:layout_height="wrap_content" />
	    </RelativeLayout>
		<View 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
	
</LinearLayout>