<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
			android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
            <ImageView 
                android:id="@+id/security_backup"
				android:contentDescription="@string/contentDescription"
	        	android:src="@drawable/menu_up"
	        	android:layout_gravity="center"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
            <View 
				android:background="@android:color/darker_gray"
				android:layout_margin="5dp"
            	android:layout_width="2dp"
           		android:layout_height="fill_parent" />
            <TextView
                android:text="@string/tv_title_security"
                android:textSize="40sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View 
            android:background="@android:color/darker_gray"
            android:layout_width="fill_parent"
            android:layout_height="2dp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView 
	        android:text="@string/tv_securitysetting"
	        android:textSize="25sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
		<TextView 
		    android:text="@string/tv_security_info"
		    android:textSize="20sp"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
		<ImageView 
	        android:contentDescription="@string/contentDescription"
	        android:src="@drawable/settings_on"
	        android:layout_marginTop="10dp"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </RelativeLayout>



</LinearLayout>
