<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
			android:orientation="horizontal"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content">
            <ImageView 
                android:id="@+id/light_backup"
				android:contentDescription="@string/contentDescription"
	        	android:src="@drawable/menu_up"
	        	android:layout_gravity="center"
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"/>
            <View 
				android:background="@android:color/darker_gray"
				android:layout_margin="5dp"
            	android:layout_width="2dp"
           		android:layout_height="fill_parent" />
            <TextView
                android:text="@string/tv_title_light"
                android:textSize="40sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <View 
            android:background="@android:color/darker_gray"
            android:layout_width="fill_parent"
            android:layout_height="2dp"/>
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/rl_add_lights"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <ImageView 
            android:id="@+id/iv_add_lights"
            android:src="@drawable/add"
            android:contentDescription="@string/contentDescription"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView 
            android:id="@+id/tv_add_lights"
            android:text="@string/tv_add_lights"
            android:textSize="30sp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_add_lights"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </RelativeLayout>
	
    <ListView 
        android:id="@+id/light_time_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
    
</LinearLayout>